[gd_scene load_steps=4 format=3 uid="uid://t62yr13mxyxk"]

[ext_resource type="Script" uid="uid://chx3kt1ws5brp" path="res://script/grade_level.gd" id="1_lqpxc"]
[ext_resource type="FontFile" uid="uid://dbdvbgducoq2q" path="res://ARCADE.TTF" id="2_gyfww"]

[sub_resource type="LabelSettings" id="LabelSettings_hyy22"]
font = ExtResource("2_gyfww")
font_size = 70

[node name="grade_level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lqpxc")

[node name="Choser" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -307.0
offset_right = 430.0
offset_bottom = -237.0
grow_horizontal = 2
grow_vertical = 2
text = "CHOOSE YOUR GRADE LEVEL"
label_settings = SubResource("LabelSettings_hyy22")

[node name="grade_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -28.0
offset_right = 818.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
text = "GRADE: "
label_settings = SubResource("LabelSettings_hyy22")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -388.0
offset_top = -196.0
offset_right = -134.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="grade7" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 7"

[node name="grade8" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 8"

[node name="grade9" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 9"

[node name="grade10" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 10"

[node name="grade11" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 11"

[node name="grade12" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 60
text = "GRADE 12"

[node name="back" type="Button" parent="."]
layout_mode = 1
offset_left = -63.0
offset_top = 41.0
offset_right = 191.0
offset_bottom = 109.0
theme_override_fonts/font = ExtResource("2_gyfww")
theme_override_font_sizes/font_size = 40
text = "BACK"

[connection signal="pressed" from="VBoxContainer/grade7" to="." method="_on_grade_7_pressed"]
[connection signal="pressed" from="VBoxContainer/grade8" to="." method="_on_grade_8_pressed"]
[connection signal="pressed" from="VBoxContainer/grade9" to="." method="_on_grade_9_pressed"]
[connection signal="pressed" from="VBoxContainer/grade10" to="." method="_on_grade_10_pressed"]
[connection signal="pressed" from="VBoxContainer/grade11" to="." method="_on_grade_11_pressed"]
[connection signal="pressed" from="VBoxContainer/grade12" to="." method="_on_grade_12_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
